pop-up-box init to display none

--- a/index.html
+++ b/index.html
@@ -276,12 +276,12 @@
         opacity: 0;
         -webkit-transform: translateY(100%);
         transform: translateY(100%);
-        display: block;
         z-index: 2;
         box-shadow: 0 0 7px 0 rgba(0,0,0,.4);
         min-height: 105px;
         min-width: 230px;
         max-width: 340px;
+        display: none;
       }
 
       .close-box {
