--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
       body {
         font-family: europa;
         font-weight: 300;
-        overflow: hidden;
+        margin: 0;
       }
 
       .interactive-image-wrapper {
         margin-left: auto;
         margin-right: auto;
         position: relative;
-        width: 100% !important;
+        width: 85% !important;
       }
 
       .interactive-image {
